Xxx Xxx 99 99:99:99 UTC 2010

        0.99 release.

        Changes

        - 'automate genkey' is renamed to 'automate generate_key'

        - Selectors are much more powerful now, and the characters '(',
          ')', and ';' need to be quoted if mean literally (just like
          '/'). See section 3.2 in the documentation for details.
          (fixes monotone bug #18302).

        - The command 'db kill_rev_locally' has been renamed to
          'local kill_revision', and 'db kill_tag_locally' and
          'db kill_branch_certs_locally' have been replaced with a more
          flexible command 'local kill_certs'.

        - The 'cert' command can now operate on multiple revisions at once.

        - The SERVER [BRANCH] call syntax for network-related commands
          has been deprecated in favour of the existing, universal
          URI syntax.  Additionally, file:// and ssh:// URIs are now
          parsed for include and exclude patterns just as the native
          mtn:// URIs.

          The possibility to specify include patterns by using
          'include=' and exclude patterns by using 'exclude='
          in the query string has been removed.

          Monotone's native protocol (mtn://) is still the default
          protocol if nothing is specified.

          The format for the server part of the 'default-server',
          'known-server', 'server-include' and 'server-exclude'
          database variables has been changed and now always includes
          the complete (normalized) URI resource, consisting of the
          used protocol, user, host, port and path parts.  Older entries
          in existing databases which do not match the new format are
          preserved and not changed by monotone.

          Please check the manual section 5.3 for more details on the
          URI syntax.

        - Naturally, the 'clone' command now also accepts mtn:// URIs,
          though the use of branch globs is forbidden unless a branch is