@@ -4,6 +4,9 @@ Xxx Xxx 99 99:99:99 UTC 2010
 
         Changes
 
+        - On Win32 native, '--no-format-dates' is the default for
+          'commit', since dates are not parseable on Win32 native.
+
         - 'automate genkey' is renamed to 'automate generate_key'
 
         - Selectors are much more powerful now, and the characters '(',
